pkg/ibmvpc/examples/out/explain_out/tgwDisabledNoTgwDefined_all_vpcs_explain_debug.txt
Connectivity explanation between ky-vsi1-subnet20 and ky-vsi0-subnet0 within combined-vpc-local-tg-ky
=====================================================================================================

No connection between ky-vsi1-subnet20[10.240.128.5] and ky-vsi0-subnet0[10.240.0.5]; connection blocked since src, dst of different VPCs but no transit gateway is defined
Egress: security group sg21-ky allows connection; network ACL acl21-ky allows connection
Ingress: network ACL acl1-ky allows connection; security group sg1-ky allows connection
Path:
	ky-vsi1-subnet20[10.240.128.5] -> security group sg21-ky -> subnet20 -> network ACL acl21-ky -> 
	test-vpc2-ky -> |

Details:
~~~~~~~~
Egress:
security group sg21-ky allows connection with the following allow rules
	index: 1, direction: outbound, protocol: all, cidr: 0.0.0.0/0
network ACL acl21-ky allows connection with the following allow rules
	index: 0, direction: outbound , src: 0.0.0.0/0 , dst: 0.0.0.0/0, conn: all, action: allow

Ingress:
network ACL acl1-ky allows connection with the following allow rules
	index: 1, direction: inbound , src: 0.0.0.0/0 , dst: 0.0.0.0/0, conn: all, action: allow
security group sg1-ky allows connection with the following allow rules
	index: 0, direction: inbound, protocol: all, cidr: 0.0.0.0/0
------------------------------------------------------------------------------------------------------------------------
